# SETR_Proj3

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  nrf52840dk_nrf52840.overlay  prj.conf
build_1/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  sysbuild_modules.txt
build_1/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  zephyr.dts  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
build_2/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_2/zephyr/: cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.elf  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
build_3/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
build_tests/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
src/: UART.c  buttons.c  main.c  mainBK.c  rtdb.c  rtdb.h
tests/: CMakeLists.txt  PID_tests.c  cmd.txt  cmdproc_tests.c  rtdb_tests.c  test  testcase.yaml  uart_sim
tests/modules/: PID.c  cmdproc.c  cmdproc.h  rtdb.c  rtdb.h
tests/src/: main.c
(+351 files in other folders)
